# jcal

./: .gitignore  README.md  README.rst  pyproject.toml
jcal/: __init__.py
src/jcal/: __init__.py
src/tests/: test_jcal.py
tests/: test_jcal.py
