[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = []
description = "`jcal` is a package for Japanese holiday."
license = {text = "Apache-2.0"}
name = "jcal"
readme = "README.md"
requires-python = ">=3.11"
version = "1.2.1"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/jcal"

[project.scripts]
jcal = "jcal:main"

[tool.uv]
dev-dependencies = [
  "holidays>=0.64",
  "jupyterlab>=4.3.4",
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D", "DOC201", "DTZ002", "E501"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.pytest.ini_options]
addopts = [
  "--strict-markers", # マーカースペルミス対応
  "--strict-config", # 設定ミス対応
  "-ra", # サマリー表示
  "-v", # 詳細表示
  "-x", # 失敗時に終了
  "--capture=no", # 標準出力表示
]
testpaths = "src/tests"

[tool.pyright]
reportMissingImports = false

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
