[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = []
description = "`jcal` is a package for Japanese holiday."
license = "Apache-2.0"
license-files = ["LICENSE*"]
name = "jcal"
readme = "README.md"
requires-python = ">=3.14"
version = "2026.05.04"

[dependency-groups]
dev = [
  "holidays>=0.95",
  "jupyter>=1.1.1",
  "pytest>=9.0.3",
]

[project.urls]
homepage = "https://github.com/SaitoTsutomu/jcal"

[project.scripts]
jcal = "jcal:main"

[tool.taskipy.tasks]
jupyter = "uv run jupyter lab -y nbs"
license = "uv run -w pip-licenses pip-licenses"
lint = "ruff check && pyrefly check"
pip-audit = "uv run -w pip-audit pip-audit"
test = "uv run pytest"

[tool.uv]
exclude-newer = "3 days"

[[tool.uv.index]]
default = true
url = "https://pypi.flatt.tech/simple/"

[tool.pyrefly]
project-includes = ["src"]

[tool.ruff]
exclude = ["*.ipynb", "nbs"]
src = ["src"]

[tool.ruff.lint]
ignore = [
  "ANN204",
  "COM812",
  "CPY",
  "D10",
  "D203",
  "D213",
  "D400",
  "D415",
  "DOC201",
  "DOC501",
  "DTZ002",
  "E501",
  "INP001",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"*/tests/*.py" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.pytest.ini_options]
addopts = [
  "--strict-markers", # マーカースペルミス対応
  "--strict-config", # 設定ミス対応
  "-ra", # サマリー表示
  "-v", # 詳細表示
  "-x", # 失敗時に終了
  "--capture=no", # 標準出力表示
]
testpaths = "src/tests"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12.0"]
